# chessgpt-distill

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: docker.yml
chessgpt_distill/: __init__.py  evaluation.py  search.py  stockfish.py
configs/: distill_15g.yaml  distill_h100.yaml
scripts/: evaluate.py  generate_sf_data.py  generate_test_set.py  train_distill.py
